Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23307

QLocale reference is not defining the format for date and time format methods

    XMLWordPrintable

Details

    Description

      The reference documentation misses definition of what following methods return:

      • QString dateTimeFormat ( FormatType format = LongFormat ) const
      • QString dateFormat ( FormatType format = LongFormat ) const
      • QString timeFormat ( FormatType format = LongFormat ) const

      The method reference only tells vaguely: "Returns the time format used for the current locale."

      But it doesn't define what exactly is the format the QString is returned in which makes it impossible for application to trust the returned value. Is there a contract for the format?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Eddy Edward Welbourne
            auotila Aleksi Uotila
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes