Link from QLocale to where date-time formats are explained

QLocale has various methods that deal in date-time formats, which may
be supplied as strings; but does not document the form of a format
string.  That's documented in QDate, QTime and QDateTime, so link to
them for the details.

Task-number: QTBUG-23307
Change-Id: I6347d80a87dc03f6a4065e3d5bf4d535f05af93f
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>